NotVerified/JMLFaleNegative/Structural/ArjaE/AddLoop/bug3/Repaired/ESC_Repaired.txt
AddLoop.java:8: error: Expected an integral type in loop_decreases, not double
            //@ decreases n;
                          ^
1 error
